<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
        <Gallery
            android:id="@+id/overview_wallpaper_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spacing="-4dp" />
        <HorizontalScrollView
            android:id="@+id/overview_widget_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/overview_panel_scrollbar_height"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarSize="@dimen/overview_panel_scrollbar_height"
            android:scrollbarStyle="outsideOverlay">
            <LinearLayout
                android:id="@+id/overview_widget_detail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/overview_panel_item_height"
                android:layout_gravity="top"
                android:orientation="horizontal">
                
            </LinearLayout>
        </HorizontalScrollView>
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/overview_panel_height"
    android:layout_gravity="bottom">
    <FrameLayout
        android:id="@+id/overview_switch"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:gravity="center">
        <HorizontalScrollView
            android:id="@+id/overview_switch_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:scrollbars="none"
            android:paddingBottom="@dimen/overview_panel_scrollbar_height"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarSize="@dimen/overview_panel_scrollbar_height"
            android:scrollbarStyle="outsideOverlay">
            <LinearLayout
                android:id="@+id/overview_switch_detail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/overview_panel_item_height"
                android:layout_gravity="top"
                android:orientation="horizontal">
                
            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/overview_widget"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:gravity="top">
        <include layout="@layout/apps_customize_pane"
            android:id="@+id/apps_customize_pane"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/overview_panel_item_height"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/overview_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone">
        <HorizontalScrollView
            android:id="@+id/overview_wallpaper_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:paddingBottom="@dimen/overview_panel_scrollbar_height"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:scrollbarSize="@dimen/overview_panel_scrollbar_height"
            android:scrollbarStyle="outsideOverlay">
            <LinearLayout
                android:id="@+id/overview_wallpaper_detail"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/overview_panel_item_height"
                android:layout_gravity="top"
                android:orientation="horizontal">
                
            </LinearLayout>
        </HorizontalScrollView>
    </FrameLayout>
    
    <LinearLayout
    android:id="@+id/overview_top"
    android:layout_width="match_parent"
    android:layout_height="@dimen/overview_panel_item_height"
    android:layout_marginBottom="@dimen/overview_panel_scrollbar_height"
    android:gravity="center"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/wallpaper_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/wallpaper_button"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/wallpaper_button_text"
        android:textColor="@color/workspace_icon_text_color"
        android:textAllCaps="true"
        android:textSize="@dimen/overview_panel_textview_textsize" />

    <TextView
        android:id="@+id/widget_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/widget_button"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/widget_button_text"
        android:textColor="@color/workspace_icon_text_color"
        android:textAllCaps="true"
        android:textSize="@dimen/overview_panel_textview_textsize" />

    <TextView
        android:id="@+id/switch_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/switch_button"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/switch_button_text"
        android:textColor="@color/workspace_icon_text_color"
        android:textAllCaps="true"
        android:textSize="@dimen/overview_panel_textview_textsize" />

    <TextView
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/setting_button"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/settings_button_text"
        android:textColor="@color/workspace_icon_text_color"
        android:textAllCaps="true"
        android:textSize="@dimen/overview_panel_textview_textsize" />
    
    </LinearLayout>
</FrameLayout>